note list fragment is edited

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="190dp"
+    android:layout_height="wrap_content"
     android:clickable="true"
     app:cardCornerRadius="20dp"
     app:cardElevation="10dp"
@@ -17,35 +17,42 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:orientation="horizontal">
+    <LinearLayout
+        android:id="@+id/infoLinearLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/update"
+        android:layout_width="0dp"
+        android:gravity="start"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="115dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="13dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/bell"
             android:text="raian@gmail.com"
             android:textColor="#000"
             android:textSize="30sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            />
 
 
         <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="6dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/bell"
             android:textColor="#000"
+            android:layout_marginStart="10dp"
             android:textSize="25sp"
             app:layout_constraintStart_toStartOf="@+id/title"
             app:layout_constraintTop_toBottomOf="@+id/title"
@@ -55,37 +62,39 @@
             android:id="@+id/noteWriter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="3dp"
             android:text="writer"
+            android:layout_marginStart="10dp"
             android:textColor="#000"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/description" />
 
+    </LinearLayout>
+
+
         <ImageButton
             android:id="@+id/update"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:backgroundTint="#DFD8D8"
             android:contentDescription="@string/app_name"
             android:minHeight="48dp"
             android:src="@drawable/ic_baseline_edit_24"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/infoLinearLayout"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck" />
-
+            tools:ignore="DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck,NotSibling" />
 
         <ImageButton
             android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
@@ -96,6 +105,7 @@
             android:minHeight="48dp"
             android:src="@drawable/ic_baseline_delete_24"
             app:layout_constraintStart_toStartOf="@+id/update"
+            app:layout_constraintBottom_toBottomOf="@id/infoLinearLayout"
             app:layout_constraintTop_toBottomOf="@+id/update" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
